--- a/cart.html
+++ b/cart.html
@@ -6,14 +6,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>E-Commerce Website</title>
-    <!-- * Css Link -->
+    <title>E-Commerce Website Cart</title>
     <link rel="stylesheet" href="./style/style.css" />
-    <!-- * Box Icons -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"/>
   </head>
   <body>
     <header>
